i18n: Correction page blog - textes traduits (5 langues) + clés empty state

--- a/src/i18n/locales/ar/blog.json
+++ b/src/i18n/locales/ar/blog.json
@@ -13,13 +13,17 @@
     }
   },
   "sections": {
+    "featured": "المقالات المميزة",
     "latestArticles": "المقالات المميزة",
+    "allArticlesBadge": "جميع مقالاتنا",
     "allArticles": "جميع مقالاتنا"
   },
-  "cardCta": "قراءة المقال",
-  "emptyState": {
+  "empty": {
     "title": "كتّابنا في الورشة...",
     "subtitle": "المقالات قيد الإعداد في ورشتنا التحريرية.",
-    "hint": "الدقة والجودة والالتزام بالمواعيد — حتى للمحتوى."
-  }
+    "description": "الدقة والجودة والالتزام بالمواعيد — حتى للمحتوى. 🔧",
+    "contactUs": "اتصل بنا",
+    "discoverExpertises": "اكتشف خبراتنا"
+  },
+  "cardCta": "قراءة المقال"
 }
